# Research-Risk-Financial-Agent

./: .env  .gitignore  README.md
backend/: pyproject.toml  run.py
backend/src/: graph.py  main.py  state.py
backend/src/agents/: fundamental.py  resolution.py  risk.py  sentiment.py  synthesis.py
backend/src/tools/: vector_store.py
backend/tests/: test_sentiment.py
