[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "langchain>=0.2.40",
    "langchain-community>=0.2.4",
    "tavily-python>=0.3.3",
    "langchain-openai>=0.1.2",
    "langgraph>=0.1.24",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "yfinance>=0.2.68",
    "langchain-tavily>=0.2.18",
]
